; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_hmac_prov.c_hmac_update.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_hmac_prov.c_hmac_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hmac_data_st = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64)* @hmac_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hmac_update(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.hmac_data_st*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.hmac_data_st*
  store %struct.hmac_data_st* %9, %struct.hmac_data_st** %7, align 8
  %10 = load %struct.hmac_data_st*, %struct.hmac_data_st** %7, align 8
  %11 = getelementptr inbounds %struct.hmac_data_st, %struct.hmac_data_st* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @HMAC_Update(i32 %12, i8* %13, i64 %14)
  ret i32 %15
}

declare dso_local i32 @HMAC_Update(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
